--- a/02 - students/Лисихина Диана/HW2/style1.css
+++ b/02 - students/Лисихина Диана/HW2/style1.css
@@ -1,65 +1,190 @@
-body {
-    margin: 0 auto;
-}
-
-header {
-    background-color: silver;
-    height: 150px;
-    width: auto;
-}
-
-main {
-    width: 1000px;
-    margin: 0 auto;
-}
-
-.cart-button {
-    float: right;
-    box-shadow: 2px 0 2px 1px;
-    margin-top: 110px;
-    margin-right: 30px;
-    border-radius: 45%;
-    width: 8%;
-    height: 15%;
-    background-color: papayawhip;
-    font-weight: 500;
-    color: black;
-    cursor: pointer;
-}
-
-.cart-button:hover {
-    background-color: hotpink;
-    font-weight: 700;
-    color: black;
-}
-
-.goods-list {
-    display: flex;
-    color: black;
-    width: 10%;
-    height: 15%;
-    outline: 2px;
-    outline-color: black;
-}
-
-.goods-item {
-    height: 150px;
-    width: 150px;
-    text-align: center;
-    border-radius: 10%;
-    background-color: cornsilk;
-    padding: 45px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    border: 2px solid red;
-    margin-right: 20%;
-    margin-top: 30%;
-}
-
-.goods-item:hover {
-    cursor: pointer;
-    transform: scale(1.1);
-    transition: transform 0.2s ease-in-out;
-    background-color: lightpink;
-}
+        body {
+            margin: 0 auto;
+            font-family: fantasy;
+        }
+        
+        header {
+            background-color: #ee9cb483;
+            height: 150px;
+            width: auto;
+        }
+        
+        main {
+            width: 1000px;
+            margin: 0 auto;
+        }
+        
+        .cart-button {
+            float: right;
+            box-shadow: 2px 2px 10px 2px rgb(255, 255, 255);
+            margin-top: 110px;
+            margin-right: 30px;
+            border-radius: 8%;
+            width: 6%;
+            height: 18%;
+            background-color: #a0217a46;
+            font-weight: 100;
+            font-family: fantasy;
+            color: rgb(41, 4, 29);
+            cursor: pointer;
+        }
+        
+        .cart-button:hover {
+            background-color: rgba(255, 105, 180, 0.329);
+            font-weight: 500;
+            color: rgb(41, 4, 29);
+        }
+        
+        .products {
+            column-gap: 10%;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, 150px);
+            grid-template-rows: 1fr;
+            padding: 30px 60px;
+            justify-content: space-between;
+        }
+        
+        p {
+            margin: 0 0 3.5px 0;
+        }
+        
+        .product-item {
+            display: flex;
+            flex-direction: column;
+            width: 150px;
+            border-radius: 5px;
+            overflow: hidden;
+            margin: 20px 0;
+        }
+        
+        img {
+            max-width: 100%;
+            height: auto
+        }
+        
+        .desc {
+            border: 1px solid #ee9cb483;
+            padding: 15px
+        }
+        
+        .cart {
+            position: relative;
+        }
+        
+        .cart-block {
+            box-shadow: 0 0 5px rgba(206, 137, 177, 0.37);
+            border-radius: 5px;
+            box-sizing: border-box;
+            right: 0;
+            top: 130%;
+            position: absolute;
+            background-color: #ee9cb483;
+            padding: 20px;
+            color: black;
+            width: 300px;
+        }
+        
+        .invisible {
+            display: none;
+        }
+        
+        .cart-block:before {
+            content: '';
+            width: 0;
+            height: 0;
+            position: absolute;
+            top: -10px;
+            right: 35px;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            border-bottom: 10px solid #ee9cb483;
+        }
+        
+        .buy-btn,
+        .del-btn {
+            margin-top: 5px;
+            background-color: #ee9cb483;
+            padding: 5px 15px;
+            border: 1px solid transparent;
+            color: #2c0d1a;
+            border-radius: 5px;
+            transition: all ease-in-out .2s;
+            cursor: pointer;
+        }
+        
+        .buy-btn:hover,
+        .del-btn:hover {
+            background-color: #ee9cb483;
+            color: #ee9cb483;
+            border: 1px solid #ee9cb483;
+        }
+        
+        .cart-item {
+            display: flex;
+            justify-content: space-between;
+        }
+        
+        .cart-item:not(:last-child) {
+            margin-bottom: 20px;
+        }
+        
+        .product-bio {
+            display: flex;
+        }
+        
+        .cart-item img {
+            align-self: flex-start;
+            margin-right: 15px;
+        }
+        
+        .product-single-price {
+            color: #ee9cb483;
+            font-size: 0.5em;
+        }
+        
+        .product-price {
+            margin-left: 30px;
+        }
+        
+        .product-desc {
+            max-width: 100px;
+        }
+        
+        .product-quantity {
+            margin-top: 15px;
+            font-size: 0.5em;
+        }
+        
+        .right-block {
+            text-align: right;
+        }
+        
+        .btn-search {
+            background-color: transparent;
+            border: none;
+            color: #000000;
+            font-size: 1em;
+            position: absolute;
+            bottom: 5px;
+            right: 0;
+        }
+        
+        .search-form {
+            position: relative;
+            margin-right: 50px;
+            display: inline-block;
+        }
+        
+        .search-field:focus {
+            outline: none;
+        }
+        
+        .search-field {
+            box-sizing: border-box;
+            width: 100px;
+            color: #410320;
+            margin: 20px 20px;
+            padding: 10px;
+            background-color: transparent;
+            border: 0.5px solid #750d5f;
+        }
