--- a/02 - students/Никита Мезенцев/Project/src/style.css
+++ b/02 - students/Никита Мезенцев/Project/src/style.css
@@ -58,6 +58,42 @@ header {
 	color: #fff;
 }
 
+.search-input {
+	margin: 0 10px;
+	margin-left: auto;
+	position: relative;
+	padding: 5px;
+	display: flex;
+	justify-content: center;
+}
+.search-input:before,
+.search-input:after {
+	content: '';
+	position: absolute;
+	display: block;
+	top: 100%;
+	width: 100%;
+	height: 1px;
+	background-color: #fff;
+	opacity: 0.3;
+	transition: linear .2s;
+}
+.search-input:after {
+	opacity: 1;
+	width: 0;
+}
+.search-control {
+	color: inherit;
+	background: none;
+	border: none;
+	outline: none;
+	position: relative;
+}
+.search-input.focused:after,
+.search-input:focus-within:after {
+	width: 100%;
+}
+
 .goods-list {
 	display: grid;
 	padding: 2rem 4rem;
@@ -104,7 +140,6 @@ header {
 }
 
 .cart {
-	margin-left: auto;
 	position: relative;
 }
 
