--- a/02 - students/Виктория Горяйнова/HW/6/style/style.css
+++ b/02 - students/Виктория Горяйнова/HW/6/style/style.css
@@ -169,3 +169,9 @@ img {
     border: none;
     border-bottom: 2px solid #fafafa;
 }
+.error-text {
+    color: #ff0000;
+    text-align: center;
+    margin-top: 30px;
+    
+}
