--- a/02 - students/Лиза Свитанько/project/css/styles.css
+++ b/02 - students/Лиза Свитанько/project/css/styles.css
@@ -45,7 +45,7 @@ h3 {
     align-self: flex-end;
 }
 
-#search {
+.goods-search {
     align-self: flex-end;
     display: grid;
     grid-template-columns: 3fr 1fr;
