--- a/02 - students/Александр Прокофьев/project/style/style.css
+++ b/02 - students/Александр Прокофьев/project/style/style.css
@@ -169,3 +169,13 @@ img {
     border: none;
     border-bottom: 2px solid #fafafa;
 }
+.err-note{
+    width: 100%;
+    height: 18px;
+    background-color: yellow;
+    position: absolute;
+    bottom: 0;
+}
+.err-note h4{
+    margin: 0
+}
